[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["protocol-asset"] }
tauri-plugin-log = "2"
# Temporarily disabled - needs refactoring to separate Python bindings
# base = { path = "../../base", default-features = false }
image = { version = "0.25", features = ["webp"] }
walkdir = "2.5"
tauri-plugin-dialog = "2"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "migrate"] }
pgvector = { version = "0.3", features = ["sqlx"] }

# Additional utilities
once_cell = "1"
dotenv = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
